--- a/css/style.css
+++ b/css/style.css
@@ -64,25 +64,39 @@ button:focus {
   -o-transition: all 0.4s;
   transition: all 0.4s; }
   .btn:hover {
-    -webkit-transform: translate(0, -1px);
-    -moz-transform: translate(0, -1px);
-    -ms-transform: translate(0, -1px);
-    -o-transform: translate(0, -1px);
-    transform: translate(0, -1px); }
+    cursor: pointer; }
+    .btn:hover span::before {
+      left: 0.5rem; }
   .btn--green {
     background-color: #23ba85;
     color: #ffffff; }
   .btn--arrow {
     padding-right: calc(70px + 1.5rem); }
-    .btn--arrow:after {
-      content: '';
-      display: block;
-      background-color: #000000;
-      height: 70px;
-      width: 70px;
+    .btn--arrow span {
       position: absolute;
       right: 0;
-      top: 0; }
+      top: 0;
+      height: 70px;
+      width: 70px;
+      background-color: #000000; }
+      .btn--arrow span::before {
+        border-style: solid;
+        border-width: 0.10em 0.10em 0 0;
+        content: '';
+        display: inline-block;
+        height: 0.45em;
+        position: relative;
+        top: 38%;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+        vertical-align: top;
+        width: 0.45em;
+        -webkit-transition: all 0.4s;
+        -moz-transition: all 0.4s;
+        -ms-transition: all 0.4s;
+        -o-transition: all 0.4s;
+        transition: all 0.4s; }
 
 body {
   font-size: 16px; }
